<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/create_file_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_huge"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/create_a_dummy_file" />

                <Button
                    android:id="@+id/open_file_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/open_files" />

                <Button
                    android:id="@+id/open_folder_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/open_folder" />

                <Button
                    android:id="@+id/download_image_download_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/download_image_url_to_downloads" />

                <Button
                    android:id="@+id/download_image_app_folder_bt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/download_image_to_app_folder" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>